--- a/projects/taux/assets/css/responsive.css
+++ b/projects/taux/assets/css/responsive.css
@@ -36,12 +36,11 @@
     .ipad {
         display: block;
         position: absolute;
-        right: 100px;
+        right: 300px;
         z-index: 0.9;
-        height: 400px;
         margin-top: 45px;
         transform: rotate(-6deg);
-        max-width: 25%;
+        max-width: 23%;
         border-radius: 20px;
         background: #fff;
         box-shadow: inset 0 4px 7px 1px #fff, inset 0 -5px 20px rgba(173, 186, 204, .25), 0 0px 33px rgba(0, 21, 64, .14), 0 10px 20px rgba(0, 21, 64, .05);
@@ -49,9 +48,8 @@
     .ipad02 {
         display: block;
         position: absolute;
-        right: 100px;
+        right: 140px;
         z-index: 0.9;
-        height: 400px;
         margin-top: 45px;
         transform: rotate(6deg);
         max-width: 25%;
@@ -62,11 +60,10 @@
     .ipad03 {
         display: block;
         position: absolute;
-        right: 100px;
+        right: 0;
         z-index: 0.9;
-        height: 400px;
-        margin-top: 45px;
-        transform: rotate(12deg);
+        margin-top: 60px;
+        transform: rotate(15deg);
         max-width: 25%;
         border-radius: 20px;
         background: #fff;
